--- a/Failed-Download-Handling.textile
+++ b/Failed-Download-Handling.textile
@@ -15,7 +15,7 @@ When drone finds a failed download it starts processing them and does a couple t
 2) Blacklisting
 Allows automatic skipping of nzbs when they fail, this means that nzb will not be automatically downloaded by drone ever again (You can still force the download via a manual search).
 
-There are 3 advanced options (on Media Management) that control the behavior of failed downloading in drone, at this time, they are all on by default.
+There are 3 advanced options (on Download Client) that control the behavior of failed downloading in drone, at this time, they are all on by default.
 
     Enable - Turns the checking of SAB and the blacklist functionality on or off
     Redownload - Controls whether or not drone will search for the same episode after a failure
